--- a/Design/index.html
+++ b/Design/index.html
@@ -1,1 +1,38 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home-Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="top-bar">
+        <div class="left">
+            <span class="icon"></span>
+            <span class="text">+977 9797979797</span>
+        </div>
+        <div class="right">
+            <div class="email">hospital@gmail.com</div>
+            <a href="#">Staff Login</a>
+            <a href="#">Lab Report</a>
+        </div>
+    </div>
+
+    <div class="logo-bar">
+        <img src="" alt="">
+        <div class="hospital-name">
+            <h1>HOSPITAL NAME</h1>
+            <p>HOSPITAL SLOGAL</p>
+        </div>
+    </div>
+
+    <nav class="navbar">
+        <a class="active" href="#">Home</a>
+        <a href="#">Our Services</a>
+        <a href="#">News and Notice</a>
+    </nav>
+
+    <script src="script.js"></script>
+</body>
+</html>
